add_library(locic-codegen
	CodeGen.cpp
	Destructor.cpp
	GenFunction.cpp
	GenStatement.cpp
	GenType.cpp
	GenTypeInstance.cpp
	GenValue.cpp
	GenVTable.cpp
	Mangling.cpp
	md5.cpp
	Memory.cpp
	Primitives.cpp
	SizeOf.cpp
	Support.cpp
	TargetInfo.cpp
	TypeSizeKnowledge.cpp
	VTable.cpp
	VirtualCall/VirtualCall-Default.cpp)

