set(SEM_FILES
	../SEM/CatchClause.cpp
	../SEM/IfClause.cpp
	../SEM/Module.cpp
	../SEM/Predicate.cpp
	../SEM/Scope.cpp
	../SEM/Statement.cpp
	../SEM/SwitchCase.cpp
	../SEM/TypeInstance.cpp
)

add_library(locic-ast
	Alias.cpp
	ConstSpecifier.cpp
	Context.cpp
	ExceptionInitializer.cpp
	Function.cpp
	FunctionType.cpp
	GlobalStructure.cpp
	ModuleScope.cpp
	ModuleScopeDecl.cpp
	Namespace.cpp
	NamespaceDecl.cpp
	Predicate.cpp
	RequireSpecifier.cpp
	Scope.cpp
	Statement.cpp
	StaticAssert.cpp
	Symbol.cpp
	TemplateVar.cpp
	TemplateVarMap.cpp
	Type.cpp
	TypeDecl.cpp
	TypeInstance.cpp
	Value.cpp
	ValueDecl.cpp
	Var.cpp
	${SEM_FILES}
)

