set(SEM_FILES
	../SEM/Predicate.cpp
	../SEM/Statement.cpp
	../SEM/SwitchCase.cpp
)

add_library(locic-ast
	Alias.cpp
	CatchClause.cpp
	ConstSpecifier.cpp
	Context.cpp
	ExceptionInitializer.cpp
	Function.cpp
	FunctionType.cpp
	GlobalStructure.cpp
	IfClause.cpp
	Module.cpp
	ModuleScope.cpp
	ModuleScopeDecl.cpp
	Namespace.cpp
	NamespaceDecl.cpp
	Predicate.cpp
	RequireSpecifier.cpp
	Scope.cpp
	Statement.cpp
	StaticAssert.cpp
	Symbol.cpp
	TemplateVar.cpp
	TemplateVarMap.cpp
	Type.cpp
	TypeDecl.cpp
	TypeInstance.cpp
	Value.cpp
	ValueDecl.cpp
	Var.cpp
	${SEM_FILES}
)

