add_library(locic-ast
	Alias.cpp
	CatchClause.cpp
	ConstSpecifier.cpp
	Context.cpp
	ExceptionInitializer.cpp
	Function.cpp
	FunctionType.cpp
	GlobalStructure.cpp
	IfClause.cpp
	MethodSetElement.cpp
	Module.cpp
	ModuleScope.cpp
	ModuleScopeDecl.cpp
	Namespace.cpp
	NamespaceDecl.cpp
	Predicate.cpp
	PredicateDecl.cpp
	RequireSpecifier.cpp
	Scope.cpp
	Statement.cpp
	StatementDecl.cpp
	StaticAssert.cpp
	SwitchCase.cpp
	Symbol.cpp
	TemplateVar.cpp
	TemplateVarMap.cpp
	Type.cpp
	TypeDecl.cpp
	TypeInstance.cpp
	Value.cpp
	ValueDecl.cpp
	Var.cpp
)
