
add_library(locic-parser
	AttributeBuilder.cpp
	AttributeParser.cpp
	DefaultParser.cpp
	FunctionBuilder.cpp
	FunctionParser.cpp
	NamespaceBuilder.cpp
	NamespaceParser.cpp
	PredicateBuilder.cpp
	PredicateParser.cpp
	ScopeParser.cpp
	StatementBuilder.cpp
	StatementParser.cpp
	SymbolBuilder.cpp
	SymbolParser.cpp
	TemplateBuilder.cpp
	TemplateInfo.cpp
	TemplateParser.cpp
	TokenReader.cpp
	TypeBuilder.cpp
	TypeParser.cpp
	TypeInstanceBuilder.cpp
	TypeInstanceParser.cpp
	ValueBuilder.cpp
	ValueParser.cpp
	VarBuilder.cpp
	VarParser.cpp
)

